# piano-perception-transformer

./: .gitignore  CITATION.cff  COLAB_GUIDE.md  LICENSE  MAESTRO_Training_Notebook.ipynb  README.md  colab_setup.py  colab_training.py  pyproject.toml
analysis/: audio_analysis.py  audio_preprocessing.py  audio_visualization.py  find_extreme_performances.py  quick_audio_features.py  quick_dataset_analysis.py  test_audio_basic.py  test_preprocessing_robust.py
docs/: ARCHITECTURE_DECISIONS.md  CHOPIN_LISZT_DATA_COLLECTION_GUIDE.md  NEXT_STEPS_GUIDE.md  README.md  ROADMAP.md  TASKS.md
notebooks/: Piano_CNN_Colab_Test.ipynb  Piano_CNN_Training_Complete.ipynb  dataset_exploration.ipynb
src/: audio_preprocessing.py  colab_setup.py  dataset_analysis.py  demo_training_steps.py  multitask_model.py  piano_cnn_jax.py  pipeline_summary.py  quick_test.py  single_dimension_model.py  test_synthetic_pipeline.py  train_ast.py  training_pipeline_jax.py
src/datasets/: maestro_dataset.py  percepiano_dataset.py
src/models/: ast_transformer.py  ssast_pretraining.py
src/piano_analysis_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
