[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-analysis-model"
version = "0.1.0"
description = "CNN-based piano performance analysis using perceptual dimensions"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"

dependencies = [
    # Deep Learning framework
    "torch>=1.13.0,<2.1.0",
    "torchvision>=0.14.0,<0.16.0", 
    "torchaudio>=0.13.0,<2.1.0",
    
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    
    # Scientific computing and visualization
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Data handling
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    
    # Jupyter for experimentation
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"